--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@ a:hover {
 /* HEADER CONFIG START */
 header {
   width: 100%;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: black;
   color: azure;
-  padding: 0.8em;
+  padding: 0.5em;
 }
 
 #i-code{
@@ -41,7 +43,7 @@ li {
   display: flex;
   flex-direction: row;
   gap: 2rem;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 /* HEADER CONFIG END */
