--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main {
 }
 
 .first {
-  background-color: #1b263b;
+  background-image: linear-gradient(to bottom, #2c3e50, #1b263b);
   width: 100%;
   padding: 0.8em;
   font-size: 2rem;
@@ -163,6 +163,7 @@ footer {
   html {
     font-size: 1.5rem;
   }
+
 
   #hamburger {
     display: none;
