--- a/adiante/static/css/style.css
+++ b/adiante/static/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -61,6 +61,7 @@ header {
 }
 
 #sub-logo {
+  font-family: "Roboto", sans-serif;
   padding-left: 0.3rem;
 }
 
