--- a/ppt-duda/style.css
+++ b/ppt-duda/style.css
@@ -1,11 +1,3 @@
-#pallete {
-  color: #e4c1f9;
-  color: #a9def9;
-  color: #d0f4de;
-  color: #fcf6bd;
-  color: #ff99c8;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -54,20 +46,15 @@ header h1 {
   text-align: center;
   line-height: 1.5rem;
   width: 100%;
+  display: none;
 }
 
-#aguardando {
+.aguardando {
   animation: pulse 2s infinite;
 }
 
-#arrow-down {
-  width: 40%;
-  opacity: 0.4;
-  padding-top: 4rem;
-}
-
 .videoArea {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -81,7 +68,7 @@ header h1 {
   border: 5px solid transparent;
   border-radius: 5px;
   background-color: rgba(88, 182, 189, 0.629);
-  background-image: linear-gradient(to bottom right, rgb(179, 232, 214), rgb(43, 224, 164)), linear-gradient(125deg, rgba(255,255,255,0) 45%, rgba(255,255,255,0.6) 50%, rgba(235, 212, 212, 0) 53%);
+  background-image: linear-gradient(to bottom right, #b3e8d6, #2be0a4), linear-gradient(125deg, rgba(255,255,255,0) 45%, rgba(255,255,255,0.6) 50%, rgba(235, 212, 212, 0) 53%);
   background-origin: border-box;
   background-clip: padding-box, border-box;
   background-size: 100%, 200%;
@@ -110,6 +97,13 @@ header h1 {
   display: none;
 }
 
+#legenda-video {
+  font-size: 1.8rem;
+  color: #4d0577;
+  font-weight: 800;
+  letter-spacing: 0.15rem;
+}
+
 #jogadaMaquina {
   background-color: #a9def9;
   width: 100%;
@@ -125,6 +119,15 @@ header h1 {
   width: 100%;
   text-align: center;
   padding: 0.5rem;
+}
+
+.placar {
+  /* background-color: #b3e8d6; */
+  background-color: #a9def9;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  text-align: center;
+  letter-spacing: 0.2rem;
 }
 
 /* BOTOES DE COMANDO START */
@@ -176,6 +179,48 @@ footer {
 }
 
 /* EFEITOS ACESSORIOS:::::: */
+
+/* MODAL START */
+/* Modal Content */
+.pop-content {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: #fefefe;
+  width: 100%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s
+}
+
+.pop-header {
+  padding: 20px 16px;
+  background-color: rgb(53, 34, 98);
+  color: white;
+  font-size: 2rem;
+}
+
+.pop-text {
+  padding: 10px 16px;
+}
+
+.pop-text2 {
+  padding: 10px 16px;
+}
+
+.pop-botao {
+  padding: 10px 16px;
+  background-color: rgb(241, 179, 224)
+}
+
+#btn-restart {
+  background-color: blueviolet;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 24px;
+}
+/* MODAL END */
 
 /* EFEITOS BOTAO JOGAR */
 #botaoJogar {
