--- a/ppt-duda/style.css
+++ b/ppt-duda/style.css
@@ -36,6 +36,7 @@ header h1 {
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  max-height: 80vh;
   align-items: center;
 }
 
@@ -80,16 +81,9 @@ header h1 {
   transition: box-shadow 0.25s, text-shaddw 0.25s;
   overflow: hidden;
 }
-
-#div-arco {
-  position: absolute;
-  top: 0.3rem;
-  left: 0.2rem;
-  opacity: 0.5;
-}
-
-#arco-iris {
-  width: 30%;
+#videoDimensao {
+  overflow: hidden;
+  object-fit: contain;
 }
 
 #subVideo {
