--- a/ppt-duda/style.css
+++ b/ppt-duda/style.css
@@ -214,15 +214,16 @@ footer {
 }
 
 .pop-text {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   padding: 1rem;
 }
 
 .pop-text2 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-style: italic;
   letter-spacing: 0.15rem;
   padding: 1rem;
+  line-height: 1.5;
 }
 
 .pop-botao {
