--- a/static/style.css
+++ b/static/style.css
@@ -139,7 +139,7 @@ main {
   z-index: 0;
   position: absolute;
   right: 2rem;
-  opacity: 0.3;
+  opacity: 0.2;
 }
 
 .imagem-fundo img {
@@ -156,6 +156,13 @@ main {
 #arrow-down {
   font-size: 3rem;
   padding-top: 1rem;
+  letter-spacing: -1rem;
+  display:inline-block;
+  -webkit-transform:scale(2,1); /* Safari and Chrome */
+  -moz-transform:scale(2,1); /* Firefox */
+  -ms-transform:scale(2,1); /* IE 9 */
+  -o-transform:scale(2,1); /* Opera */
+  transform:scale(2,1); /* W3C */
 }
 
 #eduardo {
@@ -163,20 +170,22 @@ main {
   padding-bottom: 0.3rem;
   padding-left: 0.5rem;
 }
+
 #stein {
   font-size: 5rem;
   padding-left: 3rem;
   padding-bottom: 0.2em;
 }
+
 #developer {
   padding-left: 3.5em;
   font-size: 2rem;
   font-style: italic;
   padding-bottom: 2rem;
 }
+
 #description {
   font-size: 1.2rem;
-  /* text-align: justify; */
   padding-right: 5rem;
 }
 
@@ -209,6 +218,7 @@ main {
 
 .project-image {
   max-width: 60vw;
+  height: auto;
 }
 
 /* THIRD SECTION start */
